# ProChem

./: .gitignore  LICENCE  OLD_Core.py  OLD_GUI.py  OLD_Poscar.py  PreviousChanges.txt  README.md  VR_Gui.py  __init__.py  launch.json  pyproject.toml
Gui/: Resource_rc.py  VRAuthSupercomputerGUI.py  VRAuthSupercomputerGUI.ui  VRFilesharingGUI.ui  VRGraphProcessingGUI.py  VRGraphProcessingGUI.ui  VROszicarGUI.py  VROszicarGUI.ui  VRPoscarGUI.py  VRPoscarGUI.ui  VRProcessingGUI.py  VRProcessingGUI.ui  VRProcessingGUI_dev.py  VRProcessingGUI_dev.ui  VRRewriteFileGUI.py  VRRewriteFileGUI.ui  VRTransferredGUI.py  VRTransferredGUI.ui  VRVisualGUI.py  VRVisualGUI.ui  choose_poscar.py  control.py  graph.py  lammps_processing.py  opengl.py  opengl_widget.py  oszicar.py  poscar.py  print.py  processing_dev.py  transferred.py  vasp_processing.py
Logs/: VRLogger.py  VRPrint.py  logger_wrapper.py  print.py
Processing/: VRGraph_dev.py  VRMD.py  VROszicar.py  VRProcessing.py
Settings/: VRSettings.py  settings.json  settings.py
Visual/: VROpenGL.py  VRPrimitives.py  VRVBO.py  VRVisual.py  control.py  primitives.py  vbo.py  visual.py
graph/: graph.py  graph_dev.py
gui/: auth_supercomputer.py  choose_parser.py  choose_poscar.py  control.py  graph.py  lammps_processing.py  opengl_widget.py  oszicar.py  poscar.py  print.py  processing_dev.py  resource_rc.py  rewrite_file.py  transferred.py  tree_view_model.py  vasp_processing.py  visual.py
lammps/: processing.py
logs/: print.py
parsers/: __init__.py  parser.py  vasp.py
quantum_espresso/: parser.py
settings/: settings.py
(+28 files in other folders)
